Aufloesung_ermitteln/Xrandr.pas


function XRRGetScreenResources(dpy:PDisplay; window:TWindow):PXRRScreenResources;cdecl;external;
procedure XRRFreeScreenResources(resources:PXRRScreenResources);cdecl;external;
type
  PXRROutputInfo = ^TXRROutputInfo;
  TXRROutputInfo = record
      timestamp : TTime;
      crtc : TRRCrtc;
      name : Pchar;
      nameLen : longint;
      mm_width : dword;
      mm_height : dword;
      connection : TConnection;
      subpixel_order : TSubpixelOrder;
      ncrtc : longint;
      crtcs : PRRCrtc;
      nclone : longint;
      clones : PRROutput;
      nmode : longint;
      npreferred : longint;
      modes : PRRMode;
    end;

function XRRGetOutputInfo(dpy:PDisplay; resources:PXRRScreenResources; output:TRROutput):PXRROutputInfo;cdecl;external;
procedure XRRFreeOutputInfo(outputInfo:PXRROutputInfo);cdecl;external;
function XRRListOutputProperties(dpy:PDisplay; output:TRROutput; nprop:Plongint):PAtom;cdecl;external;
type
  PXRRPropertyInfo = ^TXRRPropertyInfo;
  TXRRPropertyInfo = record
      pending : TBool;
      range : TBool;
      immutable : TBool;
      num_values : longint;
      values : Plongint;
    end;

function XRRQueryOutputProperty(dpy:PDisplay; output:TRROutput; _property:TAtom):PXRRPropertyInfo;cdecl;external;
procedure XRRConfigureOutputProperty(dpy:PDisplay; output:TRROutput; _property:TAtom; pending:TBool; range:TBool; 
            num_values:longint; values:Plongint);cdecl;external;
procedure XRRChangeOutputProperty(dpy:PDisplay; output:TRROutput; _property:TAtom; _type:TAtom; format:longint; 
            mode:longint; data:Pbyte; nelements:longint);cdecl;external;
procedure XRRDeleteOutputProperty(dpy:PDisplay; output:TRROutput; _property:TAtom);cdecl;external;
function XRRGetOutputProperty(dpy:PDisplay; output:TRROutput; _property:TAtom; offset:longint; length:longint; 
           _delete:TBool; pending:TBool; req_type:TAtom; actual_type:PAtom; actual_format:Plongint; 
           nitems:Pdword; bytes_after:Pdword; prop:PPbyte):longint;cdecl;external;
function XRRAllocModeInfo(name:Pchar; nameLength:longint):PXRRModeInfo;cdecl;external;
function XRRCreateMode(dpy:PDisplay; window:TWindow; modeInfo:PXRRModeInfo):TRRMode;cdecl;external;
procedure XRRDestroyMode(dpy:PDisplay; mode:TRRMode);cdecl;external;
procedure XRRAddOutputMode(dpy:PDisplay; output:TRROutput; mode:TRRMode);cdecl;external;
procedure XRRDeleteOutputMode(dpy:PDisplay; output:TRROutput; mode:TRRMode);cdecl;external;
procedure XRRFreeModeInfo(modeInfo:PXRRModeInfo);cdecl;external;
type
  PXRRCrtcInfo = ^TXRRCrtcInfo;
  TXRRCrtcInfo = record
      timestamp : TTime;
      x : longint;
      y : longint;
      width : dword;
      height : dword;
      mode : TRRMode;
      rotation : TRotation;
      noutput : longint;
      outputs : PRROutput;
      rotations : TRotation;
      npossible : longint;
      possible : PRROutput;
    end;

function XRRGetCrtcInfo(dpy:PDisplay; resources:PXRRScreenResources; crtc:TRRCrtc):PXRRCrtcInfo;cdecl;external;
procedure XRRFreeCrtcInfo(crtcInfo:PXRRCrtcInfo);cdecl;external;
function XRRSetCrtcConfig(dpy:PDisplay; resources:PXRRScreenResources; crtc:TRRCrtc; timestamp:TTime; x:longint; 
           y:longint; mode:TRRMode; rotation:TRotation; outputs:PRROutput; noutputs:longint):TStatus;cdecl;external;
function XRRGetCrtcGammaSize(dpy:PDisplay; crtc:TRRCrtc):longint;cdecl;external;
type
  PXRRCrtcGamma = ^TXRRCrtcGamma;
  TXRRCrtcGamma = record
      size : longint;
      red : Pword;
      green : Pword;
      blue : Pword;
    end;

function XRRGetCrtcGamma(dpy:PDisplay; crtc:TRRCrtc):PXRRCrtcGamma;cdecl;external;
function XRRAllocGamma(size:longint):PXRRCrtcGamma;cdecl;external;
procedure XRRSetCrtcGamma(dpy:PDisplay; crtc:TRRCrtc; gamma:PXRRCrtcGamma);cdecl;external;
procedure XRRFreeGamma(gamma:PXRRCrtcGamma);cdecl;external;
{ Version 1.3 additions  }
function XRRGetScreenResourcesCurrent(dpy:PDisplay; window:TWindow):PXRRScreenResources;cdecl;external;
procedure XRRSetCrtcTransform(dpy:PDisplay; crtc:TRRCrtc; transform:PXTransform; filter:Pchar; params:PXFixed; 
            nparams:longint);cdecl;external;
type
  PXRRCrtcTransformAttributes = ^TXRRCrtcTransformAttributes;
  TXRRCrtcTransformAttributes = record
      pendingTransform : TXTransform;
      pendingFilter : Pchar;
      pendingNparams : longint;
      pendingParams : PXFixed;
      currentTransform : TXTransform;
      currentFilter : Pchar;
      currentNparams : longint;
      currentParams : PXFixed;
    end;
{
 * Get current crtc transforms and filters.
 * Pass *attributes to XFree to free
  }

function XRRGetCrtcTransform(dpy:PDisplay; crtc:TRRCrtc; attributes:PPXRRCrtcTransformAttributes):TStatus;cdecl;external;
{
 * intended to take RRScreenChangeNotify,  or
 * ConfigureNotify (on the root window)
 * returns 1 if it is an event type it understands, 0 if not
  }
function XRRUpdateConfiguration(event:PXEvent):longint;cdecl;external;
type
  PXRRPanning = ^TXRRPanning;
  TXRRPanning = record
      timestamp : TTime;
      left : dword;
      top : dword;
      width : dword;
      height : dword;
      track_left : dword;
      track_top : dword;
      track_width : dword;
      track_height : dword;
      border_left : longint;
      border_top : longint;
      border_right : longint;
      border_bottom : longint;
    end;

function XRRGetPanning(dpy:PDisplay; resources:PXRRScreenResources; crtc:TRRCrtc):PXRRPanning;cdecl;external;
procedure XRRFreePanning(panning:PXRRPanning);cdecl;external;
function XRRSetPanning(dpy:PDisplay; resources:PXRRScreenResources; crtc:TRRCrtc; panning:PXRRPanning):TStatus;cdecl;external;
procedure XRRSetOutputPrimary(dpy:PDisplay; window:TWindow; output:TRROutput);cdecl;external;
function XRRGetOutputPrimary(dpy:PDisplay; window:TWindow):TRROutput;cdecl;external;
type
  PXRRProviderResources = ^TXRRProviderResources;
  TXRRProviderResources = record
      timestamp : TTime;
      nproviders : longint;
      providers : PRRProvider;
    end;

function XRRGetProviderResources(dpy:PDisplay; window:TWindow):PXRRProviderResources;cdecl;external;
procedure XRRFreeProviderResources(resources:PXRRProviderResources);cdecl;external;
type
  PXRRProviderInfo = ^TXRRProviderInfo;
  TXRRProviderInfo = record
      capabilities : dword;
      ncrtcs : longint;
      crtcs : PRRCrtc;
      noutputs : longint;
      outputs : PRROutput;
      name : Pchar;
      nassociatedproviders : longint;
      associated_providers : PRRProvider;
      associated_capability : Pdword;
      nameLen : longint;
    end;

function XRRGetProviderInfo(dpy:PDisplay; resources:PXRRScreenResources; provider:TRRProvider):PXRRProviderInfo;cdecl;external;
procedure XRRFreeProviderInfo(provider:PXRRProviderInfo);cdecl;external;
function XRRSetProviderOutputSource(dpy:PDisplay; provider:TXID; source_provider:TXID):longint;cdecl;external;
function XRRSetProviderOffloadSink(dpy:PDisplay; provider:TXID; sink_provider:TXID):longint;cdecl;external;
function XRRListProviderProperties(dpy:PDisplay; provider:TRRProvider; nprop:Plongint):PAtom;cdecl;external;
function XRRQueryProviderProperty(dpy:PDisplay; provider:TRRProvider; _property:TAtom):PXRRPropertyInfo;cdecl;external;
procedure XRRConfigureProviderProperty(dpy:PDisplay; provider:TRRProvider; _property:TAtom; pending:TBool; range:TBool; 
            num_values:longint; values:Plongint);cdecl;external;
procedure XRRChangeProviderProperty(dpy:PDisplay; provider:TRRProvider; _property:TAtom; _type:TAtom; format:longint; 
            mode:longint; data:Pbyte; nelements:longint);cdecl;external;
procedure XRRDeleteProviderProperty(dpy:PDisplay; provider:TRRProvider; _property:TAtom);cdecl;external;
function XRRGetProviderProperty(dpy:PDisplay; provider:TRRProvider; _property:TAtom; offset:longint; length:longint; 
           _delete:TBool; pending:TBool; req_type:TAtom; actual_type:PAtom; actual_format:Plongint; 
           nitems:Pdword; bytes_after:Pdword; prop:PPbyte):longint;cdecl;external;
type
  PXRRMonitorInfo = ^TXRRMonitorInfo;
  TXRRMonitorInfo = record
      name : TAtom;
      primary : TBool;
      automatic : TBool;
      noutput : longint;
      x : longint;
      y : longint;
      width : longint;
      height : longint;
      mwidth : longint;
      mheight : longint;
      outputs : PRROutput;
    end;

function XRRAllocateMonitor(dpy:PDisplay; noutput:longint):PXRRMonitorInfo;cdecl;external;
function XRRGetMonitors(dpy:PDisplay; window:TWindow; get_active:TBool; nmonitors:Plongint):PXRRMonitorInfo;cdecl;external;
procedure XRRSetMonitor(dpy:PDisplay; window:TWindow; monitor:PXRRMonitorInfo);cdecl;external;
procedure XRRDeleteMonitor(dpy:PDisplay; window:TWindow; name:TAtom);cdecl;external;
procedure XRRFreeMonitors(monitors:PXRRMonitorInfo);cdecl;external;
{_XFUNCPROTOEND }
{$endif}
{ _XRANDR_H_  }

implementation


end.
